# apps/backend/docs/swagger.json
@@ -4583,6 +4583,9 @@
                 "cost_center_id": {
                     "type": "string"
                 },
+                "cost_center_name": {
+                    "type": "string"
+                },
                 "created_at": {
                     "type": "string"
                 },
@@ -4631,6 +4634,9 @@
                     "type": "number"
                 },
                 "plot_id": {
+                    "type": "string"
+                },
+                "plot_name": {
                     "type": "string"
                 }
             }
